<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kinflow_card_title_bg"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:textColor="@color/app_text_blue_color"
        android:textSize="20sp"/>

    <FrameLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/custom_translucent"
        android:padding="10dp"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/custom_translucent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <LinearLayout
            android:id="@+id/container_buttom_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_buttom_right"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/navi_card_manage_normal"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_card_op"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_translucent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_card_delete"
                style="@style/card_op_item_style"
                android:text="@string/card_delete"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_card_top"
                style="@style/card_op_item_style"
                android:text="@string/card_top"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_card_share"
                style="@style/card_op_item_style"
                android:text="@string/card_share"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>